style updates requested, fixed a mobile issue with the download links on getstarted page, tighted up the spacing for list items in faq to match careers, added links to open careers to the bottom of the careers page.

--- a/src/styles/sass/page-faq.scss
+++ b/src/styles/sass/page-faq.scss
@@ -22,7 +22,7 @@
     font-size: 1.125rem;
     font-weight: 400;
     list-style: disc outside;
-    padding-left: 1.2rem;
+    padding-left: 2.4rem;
 
     > li {
       margin-bottom: 2rem;
